# termslime

./: LICENSE  README.md  main.py  pyproject.toml
termslime/: __main__.py  main.py
