[tool.poetry]
name = "termslime"
version = "0.1.0"
description = "Termslime displays images in your terminal with true colors."
authors = ["Gary Zhang <garyzhang2002@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
colorful = "^0.5.5"
pillow = "^9.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
termslime = "termslime.main:main"